--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -24,8 +24,8 @@ interval=15
 command=~/.config/i3blocks/i3blocks.py --check load --warning 0.7 --critical 1.0
 interval=15
 
-[gputemp]
-command=~/.config/i3blocks/i3blocks.py --check gputemp --warning 70 --critical 80
+[gpu]
+command=~/.config/i3blocks/i3blocks.py --check gpu --warning 70 --critical 80
 interval=15
 
 [time]
