--- a/i3/config
+++ b/i3/config
@@ -22,11 +22,11 @@ exec_always --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
 exec_always --no-startup-id "gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'"
 
 # volume control (i3blocks signal 10)
-set $refresh_i3status_sig10 pkill -RTMIN+10 i3blocks
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status_sig10
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status_sig10
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status_sig10
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status_sig10
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+10 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && exec pkill -RTMIN+10 i3blocks
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && exec pkill -RTMIN+10 i3blocks
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && exec pkill -RTMIN+10 i3blocks
+exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 80%
 
 # screen brightness (i3 blocks signal 11)
 bindsym $mod+o exec sh -c 'python ~/data/scripts/system-mgmt/manage_brightness.py --monitor $monitor --adjust down && exec pkill -RTMIN+11 i3blocks'
@@ -80,7 +80,9 @@ bindsym $mod+space focus mode_toggle
 
 # common app hotkeys
 bindsym $mod+F1 exec --no-startup-id brave
-bindsym $mod+F2 exec --no-startup-id slack
+bindsym $mod+F2 exec --no-startup-id code
+bindsym $mod+F3 exec --no-startup-id slack
+bindsym $mod+F4 exec --no-startup-id discord
 
 # workspaces
 set $ws1 "1:"
