--- a/i3/config
+++ b/i3/config
@@ -149,9 +149,9 @@ bindsym XF86ScreenSaver exec --no-startup-id i3lock
 # picom
 exec_always picom -f
 
-# scrot
-bindsym $mod+Print exec --no-startup-id scrot ~/Pictures/screenshots/%Y-%m-%d_%H:%M:%S_f.png
-bindsym $mod+Shift+Print exec --no-startup-id sh -c "sleep 0.2s && scrot -s ~/Pictures/screenshots/%Y-%m-%d_%H:%M:%S_s.png"
+# screenshots
+bindsym $mod+Print exec --no-startup-id sh -c "python ~/data/scripts/system-mgmt/manage_screenshot.py --type full"
+bindsym $mod+Shift+Print exec --no-startup-id sh -c "sleep 0.2s && python ~/data/scripts/system-mgmt/manage_screenshot.py --type area"
 
 # statusbar
 bar {
@@ -182,8 +182,8 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you want to exit?' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # start with gaps
-gaps inner 5
-gaps outer 5
+gaps inner 2
+gaps outer 2
 
 # gaps
 set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
