--- a/i3/config
+++ b/i3/config
@@ -158,7 +158,7 @@ bar {
         status_command i3blocks -c ~/.config/i3blocks/i3blocks.conf
         position top
         height 35
-        font pango:JetBrains Mono Bold 11
+        font pango:Inconsolata Bold 12
         separator_symbol " « "
         workspace_buttons yes
         workspace_min_width 100
