--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -31,3 +31,7 @@ interval=15
 [time]
 command=~/.config/i3blocks/i3blocks.py --check time
 interval=15
+
+[session_manager]
+command=~/.config/i3blocks/applets/session_manager.py
+full_text=  
