--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=1
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Roboto Mono 9
+gtk-font-name=Inconsolata 9
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
