--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -3,35 +3,31 @@ separator=true
 separator_block_width=40
 
 [volume]
-command=~/.config/i3blocks/i3blocks.py --check volume --warning 100 --critical 120
+command=~/data/scripts/i3blocks/i3blocks.py --check volume --warning 100 --critical 120
 interval=15
 signal=10
 
 [wifi]
-command=~/.config/i3blocks/i3blocks.py --check wifi --warning 40 --critical 20
+command=~/data/scripts/i3blocks/i3blocks.py --check wifi --warning 40 --critical 20
 interval=15
 
 [brightness]
-command=~/.config/i3blocks/i3blocks.py --check brightness --warning 1.0 --critical 1.2
+command=~/data/scripts/i3blocks/i3blocks.py --check brightness --warning 1.0 --critical 1.2
 interval=15
 signal=11
 
 [memory]
-command=~/.config/i3blocks/i3blocks.py --check memory --warning 70 --critical 90
+command=~/data/scripts/i3blocks/i3blocks.py --check memory --warning 70 --critical 90
 interval=15
 
 [load]
-command=~/.config/i3blocks/i3blocks.py --check load --warning 0.7 --critical 1.0
+command=~/data/scripts/i3blocks/i3blocks.py --check load --warning 0.7 --critical 1.0
 interval=15
 
 [gpu]
-command=~/.config/i3blocks/i3blocks.py --check gpu --warning 70 --critical 80
+command=~/data/scripts/i3blocks/i3blocks.py --check gpu --warning 70 --critical 80
 interval=15
 
 [time]
-command=~/.config/i3blocks/i3blocks.py --check time
+command=~/data/scripts/i3blocks/i3blocks.py --check time
 interval=15
-
-[session_manager]
-command=~/.config/i3blocks/applets/session_manager.py
-full_text=  
