--- a/i3/config
+++ b/i3/config
@@ -10,8 +10,8 @@ set $monitor HDMI-0
 # set resolution
 exec_always xrandr --output:$monitor --mode 1920x1080
 
-# default font
-font pango:JetBrains Mono Light 11
+# title bar font
+font pango:JetBrains Mono 10
 
 # hide title bars
 for_window [class=".*"] border pixel 0
@@ -48,6 +48,7 @@ bindsym $mod+Shift+q kill
 # rofi
 bindsym $mod+d exec --no-startup-id rofi -show drun
 bindsym $mod+Shift+l exec --no-startup-id sh -c 'python ~/data/scripts/system-mgmt/manage-session-rofi.py'
+bindsym $mod+x exec --no-startup-id sh -c 'python ~/data/scripts/openai/console-helper/console-helper-rofi.py'
 
 # shift window focus
 bindsym $mod+Left focus left
@@ -79,7 +80,7 @@ bindsym $mod+Shift+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-# common app hotkeys
+# application shortcuts
 bindsym $mod+F1 exec --no-startup-id brave
 bindsym $mod+F2 exec --no-startup-id code
 bindsym $mod+F3 exec --no-startup-id slack
@@ -183,8 +184,8 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you want to exit?' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # start with gaps
-gaps inner 2
-gaps outer 2
+gaps inner 1
+gaps outer 1
 
 # gaps
 set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
