--- a/i3/config
+++ b/i3/config
@@ -101,7 +101,7 @@ for_window [class="Brave-browser"] move to workspace $ws2
 for_window [class="code-oss"] move to workspace $ws3
 for_window [class="discord"] move to workspace $ws5
 for_window [class="Slack"] move to workspace $ws4
-for_window [class="Steam"] move to workspace $ws6
+for_window [class="steam"] move to workspace $ws6
 for_window [class="VirtualBox Manager"] move to workspace $ws7
 
 # switch to workspace
