--- a/i3/config
+++ b/i3/config
@@ -1,5 +1,10 @@
 # i3 config file (v4)
 
+# signals
+# 1     volume
+# 2     ethernet
+# 3     wifi
+
 # set modkey
 set $mod Mod4
 
@@ -18,7 +23,8 @@ for_window [class=".*"] border pixel 0
 
 # start some stuff
 exec_always --no-startup-id dex --autostart --environment i3
-exec_always --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
+#exec_always --no-startup-id /usr/lib/notification-daemon-1.0/notification-daemon
+exec_always --no-startup-id /usr/bin/dunst
 exec_always --no-startup-id "gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'"
 
 # XF86 volume control (i3blocks signal 1)
@@ -32,10 +38,11 @@ exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
 # terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
-# rofi - menu, session manager, chatbot
+# rofi - menu, session manager, chatbot, etc
 bindsym $mod+d exec --no-startup-id rofi -show drun
 bindsym $mod+l exec --no-startup-id sh -c 'python ~/data/scripts/system-mgmt/rofi-session-manager.py --rofi'
 bindsym $mod+x exec --no-startup-id sh -c 'python ~/data/scripts/openai/console-helper/console-helper-rofi.py'
+bindsym $mod+m exec --no-startup-id sh -c 'python ~/data/scripts/system-mgmt/rofi-wifi-manager.py'
 bindsym XF86ScreenSaver exec --no-startup-id sh -c 'python rofi-session-manager.py --session lock'
 
 # application shortcuts
@@ -59,10 +66,10 @@ bindsym $mod+Shift+Print exec --no-startup-id sh -c "sleep 0.2s && python ~/data
 
 # statusbar
 bar {
-        status_command i3blocks -c ~/data/scripts/i3blocks/config/i3blocks.conf
+        status_command i3blocks -c ~/.config/i3blocks/i3blocks.conf
         position top
         height 35
-        font pango:Inconsolata Bold 12
+        font pango:Inconsolata Bold 11
         separator_symbol " « "
         workspace_buttons yes
         workspace_min_width 100
