--- a/i3/config
+++ b/i3/config
@@ -96,7 +96,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you want to exit?' -B 'Ye
 
 # workspaces
 set $ws0 "0:"
-set $ws1 "1:"
+set $ws1 "1:"
 set $ws2 "2:"
 set $ws3 "3:"
 set $ws4 "4:"
