--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -88,8 +88,8 @@ fade-out-step = 0.03
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.98
+inactive-opacity = 1
+# inactive-opacity = 0.98
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.1
@@ -99,7 +99,8 @@ frame-opacity = 0.1
 inactive-opacity-override = false
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.98
+# active-opacity = 0.98
+active-opacity = 1
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.2
@@ -120,7 +121,8 @@ active-opacity = 0.98
 #
 # opacity-rule = []
 opacity-rule = ["100:class_g = 'Notification-daemon'"]
-
+opacity-rule = ["50:class_g = 'Sxiv'"]
+opacity-rule = ["100:class_g = 'Brave-browser'"]
 #################################
 #           Corners             #
 #################################
