--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -10,7 +10,7 @@ border_bottom=0
 command=~/data/scripts/i3blocks/i3blocks.py --check media --warning 100 --critical 120
 interval=15
 signal=1
-min_width=55
+min_width="-------"
 align=right
 border=#D0C3FF
 
@@ -18,34 +18,34 @@ border=#D0C3FF
 command=~/data/scripts/i3blocks/i3blocks.py --check wifi --warning 40 --critical 20
 interval=15
 signal=3
-min_width=55
+min_width="-------"
 align=right
 border=#A7D3FF
 
 [memory]
 command=~/data/scripts/i3blocks/i3blocks.py --check memory --warning 70 --critical 90
 interval=15
-min_width=50
+min_width="-------"
 align=right
 border=#D0FFFA
 
 [perf]
 command=~/data/scripts/i3blocks/i3blocks.py --check perf --warning 0.7 --critical 1.0
 interval=15
-min_width=70
+min_width="---------"
 align=right
 border=#FFD4B9
 
 [gpu]
 command=~/data/scripts/i3blocks/i3blocks.py --check gpu --warning 70 --critical 80
 interval=15
-min_width=45
+min_width="--------"
 align=right
 border=#B8F7D9
 
 [time]
 command=~/data/scripts/i3blocks/i3blocks.py --check time
 interval=60
-min_width=100
+min_width="--------------"
 align=right
 border=#C7D1E2
