--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -25,7 +25,7 @@ border=#A7D3FF
 [memory]
 command=~/data/scripts/i3blocks/i3blocks.py --check memory --warning 70 --critical 90
 interval=15
-min_width="-------"
+min_width="------"
 align=right
 border=#D0FFFA
 
