--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -2,7 +2,6 @@
 #             Shadows           #
 #################################
 
-
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
@@ -58,7 +57,6 @@
 #           Fading              #
 #################################
 
-
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 fading = true
@@ -85,7 +83,6 @@ fade-out-step = 0.03
 #################################
 #   Transparency / Opacity      #
 #################################
-
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 inactive-opacity = 1
@@ -122,8 +119,8 @@ active-opacity = 1
 # opacity-rule = []
 opacity-rule = ["90:class_g = 'Notification-daemon'"]
 opacity-rule = ["90:class_g = 'Dunst'"]
-opacity-rule = ["100:class_g = 'Sxiv'"]
-opacity-rule = ["100:class_g = 'Brave-browser'"]
+opacity-rule = ["98:class_g = 'Alacritty'"]
+
 #################################
 #           Corners             #
 #################################
@@ -131,7 +128,7 @@ opacity-rule = ["100:class_g = 'Brave-browser'"]
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 5
+corner-radius = 0
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -143,7 +140,6 @@ rounded-corners-exclude = [
 #################################
 #     Background-Blurring       #
 #################################
-
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"
@@ -325,7 +321,7 @@ use-damage = true;
 # so this could comes with a performance hit.
 # Setting this to 1.0 disables this behaviour. Requires --use-damage to be disabled. (default: 1.0)
 #
-# max-brightness = 1.0
+max-brightness = 1.0
 
 # Make transparent windows clip other windows like non-transparent windows do,
 # instead of blending on top of them.
