--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -6,6 +6,14 @@ border_left=0
 border_right=0
 border_bottom=0
 
+[assistant]
+command=~/data/scripts/openai/news.py
+interval=once
+min_width="--"
+align=right
+label=GPT-
+border=#FAFAD2
+
 [volume]
 command=~/data/scripts/i3blocks/i3blocks.py --check media --warning 100 --critical 120
 interval=15
