--- a/VSCodium/User/settings.json
+++ b/VSCodium/User/settings.json
@@ -32,4 +32,9 @@
     "workbench.statusBar.visible": false,
     "breadcrumbs.enabled": false,
     "editor.codeActionsOnSave": {},
+    "workbench.tree.indent": 15,
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.colorCustomizations": {
+    "tree.indentGuidesStroke": "#05ef3c"
+    }
 }
