--- a/VSCodium/User/settings.json
+++ b/VSCodium/User/settings.json
@@ -1,40 +1,42 @@
 {
+    "breadcrumbs.enabled": false,
+    "editor.codeActionsOnSave": {},
+    "editor.comments.insertSpace": true,
+    "editor.cursorBlinking": "smooth",
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.detectIndentation": false,
+    "editor.fontFamily": "'Monaco', monospace",
+    "editor.fontSize": 12,
+    "editor.fontWeight": "normal",
+    "editor.fontLigatures": true,
+    "editor.formatOnType": true,
+    "editor.formatOnSave": false,
+    "[python]": {
+        "editor.formatOnSave": true,
+    },
+    "editor.insertSpaces": true,
+    "editor.indentSize": 4,
+    "editor.letterSpacing": 0.2,
+    "editor.lineHeight": 1.6,
     "editor.quickSuggestions": {
         "other": false,
         "comments": false,
         "strings": false
     },
-    "editor.formatOnSave": false,
-    "[python]": {
-        "editor.formatOnSave": true,
-    },
-    "editor.formatOnType": true,
-    "editor.insertSpaces": true,
-    "editor.indentSize": 4,
+    "editor.smoothScrolling": true,
     "editor.tabSize": 4,
-    "editor.comments.insertSpace": true,
-    "editor.detectIndentation": false,
     "editor.tabCompletion": "on",
     "editor.wordSeparators": "`~!@#$%^&*()-=+[{]}\\|;:'\",.<>/?",
+    "git.confirmSync": false,
+    "security.workspace.trust.untrustedFiles": "open",
     "terminal.integrated.fontFamily": "'JetBrains Mono', monospace",
     "terminal.integrated.fontSize": 12,
-    "editor.fontFamily": "'JetBrains Mono', monospace",
-    "editor.fontSize": 12,
-    "editor.fontWeight": "normal",
-    "editor.fontLigatures": true,
-    "editor.letterSpacing": 0.2,
-    "editor.lineHeight": 1.6,
-    "editor.smoothScrolling": true,
-    "security.workspace.trust.untrustedFiles": "open",
-    "git.confirmSync": false,
     "workbench.colorTheme": "Monokai Dimmed",
     "window.menuBarVisibility": "toggle",
     "workbench.statusBar.visible": false,
-    "breadcrumbs.enabled": false,
-    "editor.codeActionsOnSave": {},
-    "workbench.tree.indent": 15,
+    "workbench.tree.indent": 20,
     "workbench.tree.renderIndentGuides": "always",
     "workbench.colorCustomizations": {
-    "tree.indentGuidesStroke": "#05ef3c"
+    "tree.indentGuidesStroke": "#05ef3c",
     }
 }
