--- a/i3/config
+++ b/i3/config
@@ -26,9 +26,7 @@ for_window [class="Sxiv"] floating enable
 # start some stuff
 exec_always --no-startup-id dex --autostart --environment i3
 exec_always --no-startup-id /usr/bin/dunst
-exec_always --no-startup-id "gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'"
-
-# set startup volume
+#exec_always --no-startup-id "gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'"
 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
 
 # volume control (i3blocks signal 1)
@@ -40,12 +38,15 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
-# rofi menus
+# keybindings rofi
 bindsym $mod+d exec --no-startup-id rofi -show drun
 bindsym $mod+l exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/session-manager-rofi.py --rofi'
 bindsym $mod+k exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-chatbot-rofi.py'
 bindsym $mod+m exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/wifi-manager-rofi.py'
 bindsym XF86ScreenSaver exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/session-manager-rofi.py --session lock'
+# keybindings dunst
+bindsym $mod+j exec --no-startup-id dunstctl history-pop
+
 
 # application shortcuts
 bindsym $mod+F1 exec --no-startup-id brave
