--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -7,7 +7,7 @@ border_right=0
 border_bottom=0
 
 [assistant]
-command=~/data/scripts/openai/news.py
+#command=~/data/scripts/openai/news.py
 interval=once
 min_width="--"
 align=right
@@ -53,7 +53,7 @@ border=#B8F7D9
 
 [time]
 command=~/data/scripts/i3blocks/i3blocks.py --check time
-interval=60
-min_width="--------------"
+interval=10
+min_width="------------"
 align=right
 border=#C7D1E2
