--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -54,6 +54,6 @@ border=#B8F7D9
 [time]
 command=~/data/scripts/i3blocks/i3blocks.py --check time
 interval=10
-min_width="------------"
+min_width="-----------"
 align=right
 border=#C7D1E2
