--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -85,8 +85,7 @@ fade-out-step = 0.03
 #################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1
-# inactive-opacity = 0.98
+inactive-opacity = 0.99
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.1
@@ -96,11 +95,10 @@ frame-opacity = 0.1
 inactive-opacity-override = false
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 0.98
-active-opacity = 1
+active-opacity = 0.99
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.2
+# inactive-dim = 0.4
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -117,9 +115,9 @@ active-opacity = 1
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = ["90:class_g = 'Notification-daemon'"]
-opacity-rule = ["90:class_g = 'Dunst'"]
-opacity-rule = ["98:class_g = 'Alacritty'"]
+# opacity-rule = ["90:class_g = 'Notification-daemon'"]
+# opacity-rule = ["90:class_g = 'Dunst'"]
+# opacity-rule = ["98:class_g = 'Alacritty'"]
 
 #################################
 #           Corners             #
