--- a/i3/config
+++ b/i3/config
@@ -1,33 +1,33 @@
 # i3 config file (v4)
 
 # signals
-# 1     volume
-# 2     ethernet
-# 3     wifi
+# 1    volume
+# 2    ethernet
+# 3    wifi
 
 # set modkey
 set $mod Mod4
 
-# set default monitor (xrandr: eDP-1 | HDMI-0)
+# set monitor
 set $monitor HDMI-0
-
-# set resolution
 exec_always xrandr --output:$monitor --mode 1920x1080
 
-# title bar
+# set window properties
 for_window [class=".*"] border pixel 0
 for_window [class=".*"] title_format "%title"
-font pango:Inconsolata Bold 11
-
-# default overrides
-for_window [class="Alacritty"] title_format " %title"
 for_window [class="feh"] floating enable
 
-# start some stuff
-exec_always --no-startup-id dex --autostart --environment i3
+# set font
+font pango:Inconsolata Bold 11
+
+# startup
 exec_always --no-startup-id /usr/bin/dunst
-#exec_always --no-startup-id "gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'"
+exec_always --no-startup-id feh --bg-fill --randomize ~/Pictures/wallpapers/*
+exec_always --no-startup-id picom -f
 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
+
+# set keyboard locale
+exec_always setxkbmap ie
 
 # volume control (i3blocks signal 1)
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+1 i3blocks
@@ -35,31 +35,43 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && exec pkill -RTMIN+1 i3blocks
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && exec pkill -RTMIN+1 i3blocks
 
-# terminal
+# keybindings
 bindsym $mod+Return exec i3-sensible-terminal
-
-# keybindings rofi
 bindsym $mod+d exec --no-startup-id rofi -show drun
-bindsym $mod+l exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/session-manager-rofi.py --rofi'
-bindsym $mod+k exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-chatbot-rofi.py'
-bindsym $mod+m exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/wifi-manager-rofi.py'
-bindsym XF86ScreenSaver exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/session-manager-rofi.py --session lock'
-# keybindings dunst
-bindsym $mod+j exec --no-startup-id dunstctl history-pop
+bindsym $mod+Shift+q kill
 
+# keybindings apps
+bindsym $mod+KP_End exec --no-startup-id brave
+bindsym $mod+KP_Down exec --no-startup-id vscodium
+bindsym $mod+KP_Page_Down exec --no-startup-id thunar
+#bindsym $mod+KP_Left exec
+#bindsym $mod+KP_Begin
+#bindsym $mod+KP_Right
+#bindsym $mod+KP_Home exec
+#bindsym $mod+KP_Up
+#bindsym $mod+KP_Page_Up
 
-# application shortcuts
-bindsym $mod+F1 exec --no-startup-id brave
-bindsym $mod+F2 exec --no-startup-id vscodium
+# keybindings tools
+bindsym $mod+Shift+KP_End exec --no-startup-id dunstctl history-pop
+bindsym $mod+Shift+KP_Down exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/wifi-manager-rofi.py'
+bindsym $mod+Shift+KP_Page_Down exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-chatbot-rofi.py'
+#bindsym $mod+Shift+KP_Left
+#bindsym $mod+Shift+KP_Begin
+#bindsym $mod+Shift+KP_Right
+#bindsym $mod+Shift+KP_Home
+#bindsym $mod+Shift+KP_Up
+#bindsym $mod+Shift+KP_Page_Up
 
-# keyboard
-exec_always setxkbmap ie
-
-# feh
-exec_always feh --bg-fill --randomize ~/Pictures/wallpapers/*
-
-# picom
-exec_always picom -f
+# keybindings i3
+bindsym $mod+Ctrl+KP_End reload
+bindsym $mod+Ctrl+KP_Down restart
+bindsym $mod+Ctrl+KP_Page_Down exec "i3-nagbar -t warning -m 'Do you want to exit?' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Ctrl+KP_Left layout stacking
+bindsym $mod+Ctrl+KP_Begin layout tabbed
+bindsym $mod+Ctrl+KP_Right layout toggle split
+bindsym $mod+Ctrl+KP_Home mode "resize"
+bindsym $mod+Ctrl+KP_Up mode "$mode_gaps"
+bindsym $mod+Ctrl+KP_Page_Up exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/session-manager-rofi.py --rofi'
 
 # screenshots
 bindsym $mod+Print exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/manage-screenshot.py --type full'
@@ -85,15 +97,6 @@ bar {
         urgent_workspace #ffffff #c678dd #ffffff
     }
 }
-
-# kill focused window
-bindsym $mod+Shift+q kill
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you want to exit?' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # workspaces
 set $ws0 "0:"
@@ -137,17 +140,6 @@ bindsym $mod+v split v
 # enter fullscreen
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -158,18 +150,15 @@ tiling_drag modifier titlebar
 # resize window (you can also use the mouse for that)
 mode "resize" {
     # These bindings trigger as soon as you enter the resize mode
-
     bindsym Left resize shrink width 10 px or 10 ppt
     bindsym Down resize grow height 10 px or 10 ppt
     bindsym Up resize shrink height 10 px or 10 ppt
     bindsym Right resize grow width 10 px or 10 ppt
 
-    # back to normal: Enter or Escape or $mod+r
+    # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
-    bindsym $mod+r mode "default"
 }
-bindsym $mod+r mode "resize"
 
 # start with gaps
 gaps inner 2
@@ -185,7 +174,6 @@ set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
-bindsym $mod+Shift+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
     bindsym o      mode "$mode_gaps_outer"
