--- a/i3/config
+++ b/i3/config
@@ -25,6 +25,7 @@ exec_always --no-startup-id /usr/bin/dunst
 exec_always --no-startup-id feh --bg-fill --randomize ~/Pictures/wallpapers/*
 exec_always --no-startup-id picom -f
 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
+exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-news.py'
 
 # set keyboard locale
 exec_always setxkbmap ie
@@ -53,9 +54,9 @@ bindsym $mod+KP_Page_Down exec --no-startup-id thunar
 
 # keybindings tools
 bindsym $mod+Shift+KP_End exec --no-startup-id dunstctl history-pop
-bindsym $mod+Shift+KP_Down exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/wifi-manager-rofi.py'
+bindsym $mod+Shift+KP_Down exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/manage-wifi-rofi.py'
 bindsym $mod+Shift+KP_Page_Down exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-chatbot-rofi.py'
-#bindsym $mod+Shift+KP_Left
+bindsym $mod+Shift+KP_Left exec --no-startup-id redshift-gtk
 #bindsym $mod+Shift+KP_Begin
 #bindsym $mod+Shift+KP_Right
 #bindsym $mod+Shift+KP_Home
