--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -92,13 +92,13 @@ frame-opacity = 0.1
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false
+inactive-opacity-override = true
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 0.99
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.4
+inactive-dim = 0.2
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -115,8 +115,6 @@ active-opacity = 0.99
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-# opacity-rule = ["90:class_g = 'Notification-daemon'"]
-# opacity-rule = ["90:class_g = 'Dunst'"]
 # opacity-rule = ["98:class_g = 'Alacritty'"]
 
 #################################
