--- a/vscodium/settings.json
+++ b/vscodium/settings.json
@@ -38,5 +38,6 @@
     "workbench.tree.renderIndentGuides": "always",
     "workbench.colorCustomizations": {
     "tree.indentGuidesStroke": "#05ef3c",
-    }
+    },
+    "editor.minimap.enabled": false
 }
