--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -5,47 +5,42 @@ border_top=1
 border_left=0
 border_right=0
 border_bottom=0
+align=right
 
 [volume]
-command=~/data/scripts/i3blocks/i3blocks.py --check media --warning 100 --critical 120
-interval=15
+command=~/.config/i3blocks/i3blocks.py --check volume --warning 100 --critical 120
+interval=once
 signal=1
-min_width="-------"
-align=right
+min_width="--------"
 border=#D0C3FF
 
 [wifi]
-command=~/data/scripts/i3blocks/i3blocks.py --check wifi --warning 40 --critical 20
-interval=15
+command=~/.config/i3blocks/i3blocks.py --check wifi --warning 40 --critical 20
+interval=30
 signal=3
 min_width="--------"
-align=right
 border=#A7D3FF
 
 [memory]
-command=~/data/scripts/i3blocks/i3blocks.py --check memory --warning 70 --critical 90
-interval=15
-min_width="------"
-align=right
+command=~/.config/i3blocks/i3blocks.py --check memory --warning 70 --critical 90
+interval=30
+min_width="-------"
 border=#D0FFFA
 
-[perf]
-command=~/data/scripts/i3blocks/i3blocks.py --check perf --warning 0.7 --critical 1.0
-interval=15
-min_width="---------"
-align=right
+[load]
+command=~/.config/i3blocks/i3blocks.py --check load --warning 0.7 --critical 1.0
+interval=30
+min_width="-------"
 border=#FFD4B9
 
 [gpu]
-command=~/data/scripts/i3blocks/i3blocks.py --check gpu --warning 70 --critical 80
-interval=15
+command=~/.config/i3blocks/i3blocks.py --check gpu --warning 70 --critical 80
+interval=30
 min_width="--------"
-align=right
 border=#B8F7D9
 
 [time]
-command=~/data/scripts/i3blocks/i3blocks.py --check time
+command=date +"%a%H %H:%M" | tr '[:lower:]' '[:upper:]'
 interval=10
-min_width="-----------"
-align=right
+min_width="------------"
 border=#C7D1E2
