--- a/i3/config
+++ b/i3/config
@@ -25,7 +25,7 @@ exec_always --no-startup-id /usr/bin/dunst
 exec_always --no-startup-id feh --bg-fill --randomize ~/Pictures/wallpapers/*
 exec_always --no-startup-id picom -f
 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
-exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-news.py'
+#exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-news.py'
 
 # set keyboard locale
 exec_always setxkbmap ie
@@ -54,8 +54,8 @@ bindsym $mod+KP_Page_Down exec --no-startup-id thunar
 
 # keybindings tools
 bindsym $mod+Shift+KP_End exec --no-startup-id dunstctl history-pop
-bindsym $mod+Shift+KP_Down exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/manage-wifi-rofi.py'
-bindsym $mod+Shift+KP_Page_Down exec --no-startup-id sh -c 'python ~/data/scripts/openai/gpt-chatbot-rofi.py'
+bindsym $mod+Shift+KP_Down exec --no-startup-id sh -c 'python ~/.config/scripts/rofi/manage-wifi.py'
+bindsym $mod+Shift+KP_Page_Down exec --no-startup-id sh -c 'python ~/.config/scripts/openai/gpt-chatbot-rofi.py'
 bindsym $mod+Shift+KP_Left exec --no-startup-id redshift-gtk
 #bindsym $mod+Shift+KP_Begin
 #bindsym $mod+Shift+KP_Right
@@ -72,11 +72,11 @@ bindsym $mod+Ctrl+KP_Begin layout tabbed
 bindsym $mod+Ctrl+KP_Right layout toggle split
 bindsym $mod+Ctrl+KP_Home mode "resize"
 bindsym $mod+Ctrl+KP_Up mode "$mode_gaps"
-bindsym $mod+Ctrl+KP_Page_Up exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/session-manager-rofi.py --rofi'
+bindsym $mod+Ctrl+KP_Page_Up exec --no-startup-id sh -c 'python ~/.config/scripts/rofi/manage-power.py --rofi'
 
 # screenshots
-bindsym $mod+Print exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/manage-screenshot.py --type full'
-bindsym --release $mod+Shift+Print exec --no-startup-id sh -c 'python ~/data/scripts/system-tools/manage-screenshot.py --type area'
+bindsym $mod+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type full'
+bindsym --release $mod+Shift+Print exec --no-startup-id sh -c 'python ~/.config/scripts/tools/manage-screenshot.py --type area'
 
 # statusbar
 bar {
