--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -40,7 +40,7 @@ min_width="--------"
 border=#B8F7D9
 
 [time]
-command=date +"%a%H %H:%M" | tr '[:lower:]' '[:upper:]'
+command=date +"%a%d %H:%M" | tr '[:lower:]' '[:upper:]'
 interval=10
 min_width="------------"
 border=#C7D1E2
