--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -85,7 +85,7 @@ fade-out-step = 0.03
 #################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.99
+inactive-opacity = 0.95
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.1
@@ -95,10 +95,10 @@ frame-opacity = 0.1
 inactive-opacity-override = true
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.99
+active-opacity = 0.95
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.2
+inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -114,7 +114,6 @@ inactive-dim = 0.2
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
 # opacity-rule = ["98:class_g = 'Alacritty'"]
 
 #################################
@@ -139,9 +138,9 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"
-blur-size = 10
+blur-size = 0
 blur-deviation = false
-blur-strength = 10
+blur-strength = 5
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -181,8 +180,7 @@ blur-kern = "3x3box";
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
@@ -337,7 +335,7 @@ max-brightness = 1.0
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "warn";
+log-level = "error";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr.
